# erl-blake3

./: LICENSE  README.md  rebar.config
.github/workflows/: erlang.yml
crates/native/: Cargo.toml
crates/native/src/: lib.rs
src/: erl_blake3.app.src  erl_blake3.erl
test/: basic_test.erl
